--- a/story.html
+++ b/story.html
@@ -77,11 +77,11 @@
 
       <h1>SweetValentines (SV)</h1>
       <br />
-      <p>When I entered the space there were a lot of promises, tons of blind trust and it usually ended with the funds gone and the Collection disapearing.
+      <p>When I entered the space there were a lot of promises, tons of blind trust and it usually ended with the funds gone and the Collection disappearing.
       Tired of getting scammed, I set out to make my own. The idea was for minters to give them to their loved ones as Valentines' Day gifts on Feb. 14, 2022 (hence the name).</p>
-      <p>This taught me the importance of Marketing and, since every Influencer/Marketer/Promoter asked for an up-front payment, it resulted in most NFTs failing silently. I heard stories of some not doing anything or just using bots so, creators were also getting scammed. <strong>Trust is punished in this space</strong>, with many saying "Do Your Own Research" and "Not Financial Advice" to deflect consequences and anyone that questions it is dismissed as a FUDer.</p>
+      <p>This taught me the importance of Marketing and, since every Influencer/Marketer/Promoter asked for an up-front payment, it resulted in most NFTs failing silently. I even heard stories of some not doing anything or just using bots so creators were also getting scammed. <strong>Trust is punished in this space</strong>, with many saying "Do Your Own Research" and "Not Financial Advice" to deflect consequences and anyone that questions it is dismissed as a FUDer.</p> 
       <br />
-      <p>I planned a Collection of 10000 Hearts, with a handfull of rare ones, and learned of an interesting feature of the Ethereum blockchain: You can edit some text for a negligeble GAS. In fact, if the image was defined in text (<a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">like in SVGs</a>) you could change it! I asked our Community if they would rather if it was in a blockchain like Polygon/Matic or BSC but Marketplaces for them were hardly known, deciding that it would stay on Ethereum, even if it was expensive.</p>
+      <p>I planned a Collection of 10000 Hearts, with a handful of rare ones, and learned of an interesting feature of the Ethereum blockchain: You can edit some text for negligible GAS. In fact, if the image was defined in text (<a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">like in SVGs</a>) you\ could change it! I asked our Community if they would rather if it was in a blockchain like Polygon/Matic or BSC but Marketplaces for them were hardly known, deciding that it would stay on Ether\eum, even if it was too expensive.</p>
     </div>
 
     <div class="panel">
@@ -90,10 +90,10 @@
       <h1>EarlyValentines (EV)</h1>
       <br />
 
-      <p>I reduced the complexity of the SVGs in atempts to make it cheaper but the cost didn't change (the contract was still quite complex) so I deployed one with static messages instead. The idea was to deploy <strong>SweetValentines</strong> with the funds I got from this smaller one. I also made a Twitter account, a Discord server and even got a Community Manager but, despite getting occasional visitors, the second was a ghost-server so I just hid it, leaving it as an exclusive to holders.</p>
+      <p>I reduced the complexity of the SVGs in attempts to make it cheaper but the cost didn't change (the contract was still quite complex) so I deployed one with static messages instead. The idea was to deploy <strong>SweetValentines</strong> with the funds I got from this smaller one. I also made a Twitter account, a Discord server and even got a Community Manager but, despite getting occasional visitors, the second was a ghost-server so I just hid it, leaving it as an exclusive to holders.</p>
       <br />
       
-      <p>Since Google (Play) kept changing their rules and wouldn't allow monetizaton, a game was adapted to the theme and made available on our website (as <strong>HeartBeats</strong>). At first it was exclusive to holders but it became available on our website a while after. The Play to Earn model would ruin its flow so it was changed to 1 EV = 1 Continue. Most NFT games are either rushed or non-existent so at least ours was fun and playable before Mint!</p>
+      <p>Since Google (Play) kept changing their rules and wouldn't allow monetization, a game was adapted to the theme and made available on our website (as <strong>HeartBeats</strong>). At first it was exclusive to holders but it became available on our website a while after. The Play to Earn model would ruin its flow so it was changed to 1 EV = 1 Continue. Most NFT games are either rushed or non-existent so at least ours was fun and playable before Mint!</p>
     </div>
 
     <div class="panel">
