--- a/story.html
+++ b/story.html
@@ -118,7 +118,7 @@
       <br />
       
       <p>Once that was done it was time for the main challenge: Doing it directly online.
-      After a few atempts to reproduce the offline editor, I learned that it couldn't be on the same page as the Collection, so I used the one I had initially (it doesn't support requests to itself by default). Funny how every step was necessary for things to click together in the end.
+      After a few attempts to reproduce the offline editor, I learned that it couldn't be on the same page as the Collection, so I used the one I had initially (it doesn't support requests to itself by default). Funny how every step was necessary for things to click together in the end.
       With every day I took another step until I made a, never before seen?, NFT. This opens a lot of questions as well as possibilities for future NFTs! I understand that many only wanted quick money and none of the learning/work to deliver anything but <strong>EarlyValentines</strong> are proof that it is possible.</p>
     </div>
     
