--- a/story.html
+++ b/story.html
@@ -90,7 +90,7 @@
       <h1>EarlyValentines (EV)</h1>
       <br />
 
-      <p>I reduced the complexity of the SVGs in attempts to make it cheaper but the cost didn't change (the contract was still quite complex) so I deployed one with static messages instead. The idea was to deploy <strong>SweetValentines</strong> with the funds I got from this smaller one. I also made a Twitter account, a Discord server and even got a Community Manager but, despite getting occasional visitors, the second was a ghost-server so I just hid it, leaving it as an exclusive to holders.</p>
+      <p>I reduced the complexity of the SVGs in attempts to make it cheaper but the cost didn't change (the contract was still quite complex) so I deployed one with a total of 361 Hearts with static messages instead. The idea was to deploy <strong>SweetValentines</strong> with the funds I got from this smaller one. I also made a Twitter account, a Discord server and even got a Community Manager but, despite getting occasional visitors, the second was a ghost-server so I just hid it, leaving it as an exclusive to holders.</p>
       <br />
       
       <p>Since Google (Play) kept changing their rules and wouldn't allow monetization, a game was adapted to the theme and made available on our website (as <strong>HeartBeats</strong>). At first it was exclusive to holders but it became available on our website a while after. The Play to Earn model would ruin its flow so it was changed to 1 EV = 1 Continue. Most NFT games are either rushed or non-existent so at least ours was fun and playable before Mint!</p>
@@ -102,7 +102,7 @@
       <h1>EnamoredValentines (EV2)</h1>
       <br />
 
-      <p>Since I made <strong>SweetValentines</strong> dynamic, I wondered if it was possible to do the same off-chain (which would also result in free edits). Quickly learning that this was possible within certain limits (such as reducing the total supply). I then thought of making a second collection, named <strong>EnamoredValentines</strong> (EV2) and there was a point when our <a href="https://www.myvalentines.xyz/">website (MyValentines.xyz)</a> had both! Since the interest for <strong>EarlyValentines</strong> was none I decided to simply add the feature to the existing collection.</p>
+      <p>Since I made <strong>SweetValentines</strong> dynamic, I wondered if it was possible to do the same off-chain (which would also result in free edits). Quickly learning that this was possible within certain limits (such as reducing the total supply). I then thought of making a second collection, named <strong>EnamoredValentines</strong> (EV2) of 2500 items and there was a point when our <a href="https://www.myvalentines.xyz/">website (MyValentines.xyz)</a> had both! Since the interest for <strong>EarlyValentines</strong> was low I decided to instead add the feature to the existing collection.</p>
       <br />
       
       <p>There were 2 free-mints, the first only having 1 participant and the second over 150. While the attention was good they were likely only interested in flipping them, so I picked an average mint price that could support the collection. If we had kept free mints we'd never be able to pay for promotion/marketing, resulting in the collection being stuck until some kind soul decided to buy, which wouldn't be beneficial for holders.</p>
