--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </a>
       </li>
       <li>
-        <a href="https://myvalentine.neocities.org/write.html">
+        <a href="/write.html">
         <img src="/build/images/write.png" width="30em" title="Write" alt="Write" />
         </a>
       </li>
@@ -75,7 +75,7 @@
       All animated, <a href="/details.html">check the details.</a>
       </p>
       <br/>
-      <a href="https://myvalentine.neocities.org/write.html">
+      <a href="/write.html">
         <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
       </a>
       <p>
@@ -95,6 +95,10 @@
     </div>
 
     <div class="panel">
+      <a href="story.html">
+        Read our story to see how we got here.
+      </a>
+      <br />
       <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=939s">
         A lovely collection for those tired of Goblins <strong>goblinating</strong> everything. (NSFW)
       </a>
