--- a/index.html
+++ b/index.html
@@ -27,44 +27,6 @@
   <main>
     <a href="#"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
 
-    <ul class="menu">
-      <li>
-        <a href="/mint.html">
-        <img src="/build/images/mint.png" width="30em" title="Mint" alt="Mint" />
-        </a>
-      </li>
-      <li>
-        <a href="https://myvalentine.neocities.org/write.html">
-        <img src="/build/images/write.png" width="30em" title="Write" alt="Write" />
-        </a>
-      </li>
-      <li>
-        <a href="/game.html">
-        <img src="/build/images/game.png" width="30em" title="Play" alt="Play" />
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/EarlyValentines/" target="_blank">
-        <img src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
-        </a>
-      </li>
-      <li>
-        <a href="https://x2y2.io/collection/earlyvalentines/items" target="_blank">
-        <img src="/build/images/x2y2.png"  width="30em" title="X2Y2" alt="X2Y2" />
-        </a>
-      </li>
-      <li>
-        <a href="https://opensea.io/collection/earlyvalentines/" target="_blank">
-        <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
-        </a>
-      </li>
-      <li>
-        <a href="https://rarible.com/earlyvalentines/" target="_blank">
-        <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
-        </a>
-      </li>
-    </ul>
-    
     <div class="panel">
       <a href="/mint.html">
         <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="60em" alt="Mint" />
@@ -74,33 +36,14 @@
       <br/>
       All animated, <a href="/details.html">check the details.</a>
       </p>
-      <br/>
-      <a href="https://myvalentine.neocities.org/write.html">
-        <img style="display:inline;padding-bottom:1em;" src="/build/images/write.png" width="60em" alt="Write" />
-      </a>
-      <p>
-      Write a <strong>Message</strong> on your <strong>EV(s)</strong>
-      <br/>
-      It's free! (once per Month)
       </p>
       <br/>
-      <a href="/game.html">
-      <img style="display:inline;padding-bottom:1em;" src="/build/images/game.png" width="60em" alt="Play" />
+      Follow us on Twitter
+      <a href="https://twitter.com/EarlyValentines/" target="_blank">
+      <img style="display:inline-block;" src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
       </a>
-      <p>
-      <strong>Play</strong> <emph>HeartBeats</emph>
-      <br/>
-      1 EV = 1 Continue
-      </p>
     </div>
 
-    <div class="panel">
-      <br />
-      <a href="https://www.youtube.com/watch?v=9DF9NNWG_fs&t=939s">
-        A lovely collection for those tired of Goblins <strong>goblinating</strong> everything. (NSFW)
-      </a>
-    </div>
-    
     <div class="tight panel">
       Copyright © 2022 <a href="https://myvalentines-theta.vercel.app">MyValentines</a>. All rights Reserved.
     </div>
