--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
       </p>
       </a>
       <br/>
-      Follow us on Twitter
+      Follow us on
       <a href="https://twitter.com/EarlyValentines/" target="_blank">
+      Twitter
       <img style="display:inline-block;" src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
       </a>
     </div>
