--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
   <style>
     body{background:maroon;color:black;}
     img{vertical-align:middle;}
-    
+    .logo{margin-bottom:1em;}
     .panel{background:white;color:black;padding:2em;margin:1% 10%;text-align:center;border-radius:.5em;}
     .panel:first-item{margin:0 10%;}
     .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
-    
-    .menu{margin-bottom:.5em;}
-    ul.menu{display:flex;justify-content:center;align-items: center;list-style:none;}
-    ul.menu li{flex:1 1 1;margin:1em 1em 1em 0;}
   </style>
   <link rel="stylesheet" href="/build/main.css">
 </head>
 <body>
   <main>
-    <a href="#"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
+    <a href="#" class="logo"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
 
     <div class="panel">
       <a href="/mint.html">
