--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <link rel="icon" type="image/png" href="/build/images/fav.png" />
 
   <style>
-    body{background:maroon;color:black;}
+    body{background:purple;color:black;}
     img{vertical-align:middle;}
     .logo{margin-bottom:1em;}
     .panel{background:white;color:black;padding:2em;margin:1% 10%;text-align:center;border-radius:.5em;}
     .panel:first-item{margin:0 10%;}
+    /* https://stackoverflow.com/questions/55174404/how-to-make-2x2-image-grid-css */
+    .grid{display:grid;grid-template-columns: repeat(2, [col-start] 1fr);grid-gap:4em;}
     .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
   </style>
@@ -23,19 +25,41 @@
   <main>
     <a href="#" class="logo"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
 
-    <div class="panel">
+    <div class="panel grid">
+      <div>
       <a href="/mint.html">
-        <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" width="80em" alt="Mint" />
+        <img style="display:inline;padding-bottom:1em;" src="/build/images/mint.png" title="Mint" alt="Mint" width="80em" />
       <p>
-      <strong>Mint</strong> yours now!
+      <strong>Mint</strong> yours here!
+      </a>
+      <br />
+      or on <a href="https://etherscan.io/address/0x731d6C6eF47e62ae0e61f51fE21EC5a513d75C68#writeContract">Etherscan</a>
       </p>
-      </a>
-      <br/>
-      Follow us on
-      <a href="https://twitter.com/EarlyValentines/" target="_blank">
-      Twitter
-      <img style="display:inline-block;" src="/build/images/twitter.png" width="30em" title="Twitter" alt="Twitter" />
-      </a>
+      </div>
+
+      <div>
+        <a href="https://hyperagon.itch.io/heartbeats" target="_blank">
+        <img style="display:inline-block;" src="/build/images/game.png" title="Play" alt="Play" width="80em" />
+        <br />
+        Play HeartBeats
+        </a>
+      </div>
+
+      <div>
+        <a href="https://twitter.com/EarlyValentines/" target="_blank">
+        <img style="display:inline-block;" src="/build/images/twitter.png" title="Twitter" alt="Twitter" width="80em" />
+        <br />
+        Follow us on Twitter
+        </a>
+      </div>
+
+      <div>
+        <a href="#" target="_blank">
+        <img style="display:inline-block;" src="/build/images/home.png" title="Dashboard" alt="Dashboard" width="80em" />
+        <br />
+        <del>Visit the Love Nest</del>
+        </a>
+      </div>
     </div>
 
     <div class="tight panel">
