--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     .button:hover{background:pink;border-radius:1em;}
     .button:hover img{transform:scale(1.3);}
     .logo{margin-bottom:1em;}
-    .panel{background:white;color:black;padding:2em;margin:1% 10%;text-align:center;border-radius:.5em;}
-    .panel:first-item{margin:0 10%;}
+    .panel{background:white;color:black;padding:2em;margin:1em 10%;text-align:center;border-radius:.5em;}
     /* https://stackoverflow.com/questions/55174404/how-to-make-2x2-image-grid-css */
-    .grid{display:grid;grid-template-columns: repeat(2, [col-start] 1fr);grid-gap:2em;}
+    .grid{margin:auto;display:grid;grid-template-columns: repeat(2, [col-start] 1fr);grid-gap:2em;}
     .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
   </style>
@@ -53,11 +52,11 @@
         </p>
       </a>
 
-      <a class="button" href="#" target="_blank">
+      <a class="button" href="https://earlyvalentines.neocities.org/">
         <img style="display:inline-block;" src="/build/images/home.png" title="Dashboard" alt="Dashboard" width="80em" />
         <p>
         <br />
-        <del>Visit the Love Nest</del>
+        Love Nest
         </p>
       </a>
     </div>
