--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <style>
     body{background:purple;color:black;}
     img{vertical-align:middle;}
-    .button{padding-top:2em;padding-bottom:1em;}
+    .button{padding-top:2em;padding-bottom:1em;vertical-align:middle;}
     .button:hover{background:pink;border-radius:1em;}
     .button:hover img{transform:scale(1.3);}
     .logo{margin-bottom:1em;}
     .panel{background:white;color:black;padding:2em;margin:1em 10%;text-align:center;border-radius:.5em;}
     /* https://stackoverflow.com/questions/55174404/how-to-make-2x2-image-grid-css */
-    .grid{margin:auto;display:grid;grid-template-columns: repeat(2, [col-start] 1fr);grid-gap:2em;}
+    .grid{display:grid;grid-template-columns:repeat(2, [col-start] 1fr);grid-gap:2em;}
     .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
   </style>
