--- a/index.html
+++ b/index.html
@@ -20,12 +20,32 @@
     .grid{display:grid;grid-template-columns:repeat(2, [col-start] 1fr);grid-gap:2em;}
     .tight{margin-left:20%;margin-right:20%;}
     .alert{background:#aa2222;color:white;padding:4em;}
+
+    ul.menu{display:flex;justify-content:center;align-items: center;list-style:none;}
+    ul.menu li{flex:1 1 1;margin:1em 1em 1em 0;}
+    /*No Menu*/
+    .logo{margin-bottom:1em;}
   </style>
   <link rel="stylesheet" href="/build/main.css">
 </head>
 <body>
   <main>
     <a href="#" class="logo"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
+    <!--
+    <ul class="menu">
+      <li>
+        <a class="button" href="https://x2y2.io/collection/earlyvalentines/items" target="_blank">
+        <img src="/build/images/x2y2.png"  width="30em" title="X2Y2" alt="X2Y2" />
+        </a>
+      </li>
+
+      <li>
+        <a class="button" href="https://opensea.io/collection/earlyvalentines/" target="_blank">
+        <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
+        </a>
+      </li>
+    </ul>
+    -->
 
     <div class="panel grid">
       <a class="button" href="/mint.html" style="width:100%;">
