--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="tight panel">
-      Copyright © 2022 <a href="https://myvalentines-theta.vercel.app">MyValentines</a>. All rights Reserved.
+      Copyright © 2022 <a href="https://myvalentines.github.io/team/">MyValentines</a>. All rights Reserved.
     </div>
   </main>
 </body>
