--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img style="display:inline-block;" src="/build/images/home.png" title="Dashboard" alt="Dashboard" width="80em" />
         <p>
         <br />
-        Tools
+        More
         </p>
       </a>
     </div>
