--- a/index.html
+++ b/index.html
@@ -33,15 +33,23 @@
     <a href="#" class="logo"><img id="logo" src="/build/images/logo.png" alt="Logo" /></a>
 
     <ul class="menu">
+      <!--
       <li>
         <a class="button" href="https://x2y2.io/collection/earlyvalentines/items" target="_blank">
         <img src="/build/images/x2y2.png"  width="30em" title="X2Y2" alt="X2Y2" />
         </a>
       </li>
+      -->
 
       <li>
         <a class="button" href="https://opensea.io/collection/earlyvalentines/" target="_blank">
         <img src="/build/images/opensea.png"  width="30em" title="OpenSea" alt="OpenSea" />
+        </a>
+      </li>
+
+      <li>
+        <a class="button" href="https://rarible.com/earlyvalentines/" target="_blank">
+        <img src="/build/images/rarible.svg" width="30em" title="Rarible" alt="Rarible" />
         </a>
       </li>
     </ul>
